arrow visibility fixed

--- a/src/scss/mixins/my-mixins.scss
+++ b/src/scss/mixins/my-mixins.scss
@@ -39,3 +39,14 @@
   object-fit: $fit-type;
   object-position: center;
 }
+
+@mixin visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
